--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,8 +1,16 @@
-.item {
-	color: white;
+.item a {
+	color: whitesmoke;
+	text-decoration: none;
+	font-size: small;
 }
 
 .nav {
 	grid-area: nav;
 	background-color: black;
+	padding: 20px 20px;
+}
+
+.item a.activeLink {
+	color: rgb(208, 109, 133);
+	font-size: medium;
 }
